# Epic_uni_projects

1st Semester/FP/lab1/: p1.py  p2.py  p3.py
1st Semester/FP/lab2/: asg_2_Nimigean_Valentin.py
1st Semester/FP/lab3/: asg3_Nimigean_Valentin.py
1st Semester/FP/lab4/: asg4_Nimigean_Valentin_bkt.py  asg4_Nimigean_Valentin_dinamic.py
2nd Semester/OOP/e/: CMakeLists.txt  Doctor.cpp  Doctor.h  Observer.h  Patient.cpp  Patient.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Subject.h  doctorwindow.cpp  doctorwindow.h  doctorwindow.ui  main.cpp
2nd Semester/OOP/lab1/: main.c
2nd Semester/OOP/lab10/: Basket.cpp  BasketWindow.cpp  BasketWindow.h  Controller.h  File_writer.h  Graph_window.h  Main.cpp  Principal_window.cpp  Tests.cpp  TrenchCoat_exceptions.cpp  TrenchCoat_exceptions.h  UndoRedo.h  User_WIndow.cpp
2nd Semester/OOP/lab2-3/: CMakeLists.txt  FunctionPointers.c  a.out  controller.c  repository.c  repository.h  tests.c  ui.c
2nd Semester/OOP/lab2-3 posted version/: CMakeLists.txt  COntroller.c  COntroller.h  Domain.c  Domain.h  Dynamic_arrray.c  Dynamic_arrray.h  Main.c  Pointer.c  Pointer.h  Repository.c  Repository.h  Tests.c  Tests.h  Undo_redo.c  Undo_redo.h  User_interface.c  User_interface.h
2nd Semester/OOP/lab4-5/: CMakeLists.txt  Controller.cpp  Controller.h  Domain.cpp  Domain.h  Dynamic_Vector.h  Main.cpp  Repository.cpp  Repository.h  Tests.cpp  User_interface.h
2nd Semester/OOP/lab4-5 posted version/: CMakeLists.txt  Domain.cpp  Domain.h  Dynamic_Vector.cpp  Dynamic_Vector.h  Repository.h  Tests.cpp  User_interface.cpp
2nd Semester/OOP/lab6-7/: CMakeLists.txt  Controller.cpp  Controller.h  File_writer.cpp  Main.cpp  Repository.cpp  Repository.h  SQL_repo.cpp  SQL_repo.h  Tests.h  oop_a6_7_915_Nimigean_Valentin
2nd Semester/OOP/lab8-9/: Admin_window.cpp  Admin_window.h  Basket.h  CMakeLists.txt  Controller.cpp  Domain.cpp  Domain.h  File_writer.cpp  Graph_window.cpp  Principal_window.h  Repository.cpp  Repository.h  User_WIndow.cpp  User_WIndow.h  User_interface.cpp  User_interface.h
2nd Semester/OOP/lab8-9/QtUi/: QtUi.cpp  QtUi.h  QtUi.qrc  QtUi.ui  QtUi.vcxproj  QtUi.vcxproj.filters  main.cpp
2nd Semester/OOP/lab8-9/QtUi/x64/Debug/QtUi.tlog/: QtUi.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
2nd Semester/OOP/lab8-9/QtUi/x64/Debug/moc/: moc_QtUi.cpp
2nd Semester/OOP/lab8-9/QtUi/x64/Debug/rcc/: qrc_QtUi.cpp
2nd Semester/OOP/lab8-9/QtUi/x64/Debug/uic/: ui_QtUi.h
2nd Semester/OOP/t1/: CMakeLists.txt  Controller.cpp  Controller.h  Domain.cpp  Domain.h  MAin.cpp  Repository.cpp  Repository.h  Tests.cpp  Tests.h  User_interface.cpp  User_interface.h
2nd Semester/OOP/t2/: CMakeLists.txt  Domain.cpp  Domain.h  Main.cpp  Service.cpp  Service.h  User_interface.cpp  User_interface.h
2nd Semester/OOP/t3/: CMakeLists.txt  Domain.h  Repository.h  Service.h  UI.h  main.cpp
2nd Semester/lab 2-3/: FunctionPointers.h  controller.h  domain.c  domain.h  main  main.c  ui.h
4th Semester/Web Programming/lab 1 - HTML webpage/: Index2.html  index.html
4th Semester/Web Programming/lab 2 - CSS/: lab2.html  pixelator.html  startMenu.html
4th Semester/Web Programming/lab 3 - HTML+CSS page rebuilding/: home.css  index.htm  tutorialpoint.html
4th Semester/Web Programming/lab 4 - JavaScript/: vali.html
4th Semester/Web Programming/lab 5 - jquery/: index.html
5th Semester/Mobile Applications/flutter_db_only/: pubspec.yaml
5th Semester/Mobile Applications/flutter_ui_non_natifve/: README.md  pubspec.yaml
5th Semester/Parallel and Distributed Programming/bonus_lab/: kernel.cl  main.cpp  poly_mult
5th Semester/Parallel and Distributed Programming/final_project/: app_mpi  config.txt  cuda_ncc  distributed_match  documentation.md  log.txt  main.cpp  main_mpi.cpp  matcher  mpi  mpi_match  mpi_matcher.cpp  non_distributed.cpp
5th Semester/Parallel and Distributed Programming/lab 1/: Program.cs  README.md  pdp_lab_1.sln
5th Semester/Parallel and Distributed Programming/lab 2/: scalar_product  scalar_product.cpp
5th Semester/Parallel and Distributed Programming/lab 4/: Await.cs  CallBack.cs  HttpParser.cs  Program.cs  Sockethelpers.cs  Tasks.cs  pfp_lab_4.sln  urls.txt
5th Semester/Parallel and Distributed Programming/lab 5/: Program.cs  documentation.md  lab5.sln  results.txt
5th Semester/Parallel and Distributed Programming/lab 7/: distributed.py  main.py  main_numbers.py  mpi_numbers_results.txt  mpi_results.txt
5th Semester/Parallel and Distributed Programming/lab 8/: dsm.cpp  dsm.h  dsm.txxt  dsm_app  main.cpp
6th semester/LLM/lab1/: L1.ipynb
6th semester/design-patterns/: ideas.txt
(+213 files in other folders)
