cmake_minimum_required(VERSION 3.27)
project(a2_3_915_Nimigean_Valentin C)

set(CMAKE_C_STANDARD 11)

add_executable(a2_3_915_Nimigean_Valentin
        Main.c
        Dynamic_arrray.h
        Dynamic_arrray.c
        Domain.h
        Domain.c
        Repository.h
        Repository.c
        COntroller.h
        COntroller.c
        Undo_redo.h
        Undo_redo.c
        Pointer.h
        Pointer.c
        User_interface.h
        User_interface.c
        Tests.h
        Tests.c)

