cmake_minimum_required(VERSION 3.22)
project(oop_a6_7_915_Nimigean_Valentin)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)




add_executable(oop_a6_7_915_Nimigean_Valentin
Repository.cpp
Repository.h
Domain.h
Domain.cpp
Controller.h
Controller.cpp
Tests.h
Main.cpp
Tests.cpp
User_interface.cpp
User_interface.h
TrenchCoat_exceptions.h
TrenchCoat_exceptions.h
TrenchCoat_exceptions.cpp
File_writer.h
File_writer.cpp
SQL_repo.cpp
SQL_repo.h
sqlite3.c
sqlite3.h
)

