cmake_minimum_required(VERSION 3.22)
project(oop_t2_915_Nimigean_Valentin)

set(CMAKE_CXX_STANDARD 14)

add_executable(oop_t2_915_Nimigean_Valentin
        Main.cpp
        Domain.h
        Domain.cpp
        Service.h
        Service.h
        Service.cpp
        User_interface.h
        User_interface.cpp
        User_interface.cpp)
